# RP2040_Kernel

./: README.md
src/: CMakeLists.txt  benchmark.c  benchmark.h  build.sh  commands.c  commands.h  dmesg.c  dmesg.h  governors.c  governors.h  governors_ondemand.c  governors_performance.c  governors_rp2040_perf.c  governors_rp2040_perf.h  governors_schedutil.c  main.c  metrics.c  metrics.h  persist.c  persist.h  pio_idle.c  pio_idle.h  pio_idle.pio  system.c  system.h  uart_log.c  uart_log.h
